welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: ':' expected but ')' found.
def isFacingTrail(couleur)
                         ^SlugSnail:44: error: identifier expected but '}' found.
}
^